pilot/pkg/config/kube/gateway/testdata/mismatch.yaml
# Mismatch shows that we don't generate config for Gateways that do not match the GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: istio
spec:
  controller: istio.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  gatewayClassName: something-else
  listeners:
  - name: default
    port: 80
    protocol: HTTP
